# EonTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Software Architecture.txt  plan.txt
.github/workflows/: ci.yml
Application/: CMakeLists.txt
Application/include/eon/application/: RunWorkflowUseCase.h
Application/src/: RunWorkflowUseCase.cpp
Core/: CMakeLists.txt
Core/include/eon/core/: EventBus.h
Core/src/: EventBus.cpp
Domain/: CMakeLists.txt
Domain/include/eon/domain/: WorkflowDefinition.h  WorkflowDefinitionIO.h
Domain/src/: WorkflowDefinitionIO.cpp
Orchestrator/: CMakeLists.txt
Orchestrator/src/: main.cpp
Plugins/SampleActivity/: CMakeLists.txt
Plugins/SampleActivity/src/: SampleActivityPlugin.cpp  sampleactivity.json
Plugins/SampleAnalyzer/: CMakeLists.txt
Plugins/SampleAnalyzer/src/: SampleAnalyzerPlugin.cpp  sampleanalyzer.json
Plugins/SampleReporter/: CMakeLists.txt
Plugins/SampleReporter/src/: SampleReporterPlugin.cpp  samplereporter.json
Runtime/: CMakeLists.txt
Runtime/include/eon/runtime/: WorkflowEngine.h
Runtime/src/: WorkflowEngine.cpp
RuntimeWorker/: CMakeLists.txt
RuntimeWorker/src/: main.cpp
SDK/: CMakeLists.txt
SDK/include/eon/sdk/: IActivityPlugin.h
Studio/: CMakeLists.txt
Studio/src/: main.cpp
Workflows/: branching.workflow.json  compensation.workflow.json  minimal.workflow.json  parallel.workflow.json  recovery.workflow.json
